# transcription_tool

./: README.md  pyproject.toml  requirements.txt
executables/: transcription_tool.spec  transcription_tool_uncompressed.spec
scripts/: run.py
scripts/core/: classes.py  functions_gui_state_save.py  functions_transcriptor.py
scripts/qt/: message_dialog.py  transcription_thread.py  transcriptor_main.py  ui_color_test.py
scripts/qt/qss/: dark.qss
scripts/qt/ui/: breeze_dark.qss  custom_dark.qss  dark.qss  message_dialog.ui  transcription_main_window.ui  transcription_text_dialog.ui
