[tool.poetry]
name = "transcription-tool"
version = "0.1.0"
description = ""
authors = ["ericnjkim <ericnjkim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"#"^3.12"
openai-whisper = "^20231117"
pyqt5 = "^5.15.11"
pyinstaller = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
